--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FccProject</title>
+  <title>Family Command Centre</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://kit.fontawesome.com/ece4cd7208.js" crossorigin="anonymous"></script>
+
+  <link rel="icon" type="image/x-icon" href="fabicon2.ico">
 </head>
 <body>
   <app-root></app-root>
